--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import dash_bootstrap_components as dbc"
    ]
   },
   {
